resym_core/tests/snapshots/type_reconstruction__type_reconstruction_msvc_access_specifiers-19.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest5 { /* Size=0x2 */
  union {
    /* 0x0000 */ public: unsigned short b1 : 1; /* BitPos=0 */
    /* 0x0000 */ public: unsigned short b2 : 5; /* BitPos=0 */
    /* 0x0000 */ public: unsigned short b3 : 10; /* BitPos=0 */
  };
};
